--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 <head>
     <title>Strike(this.Pose)</title>
     <script src="https://use.fontawesome.com/cac5715983.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/dealwithit.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
         <div class="header">
