unflipping ref img

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
                 <p>Click here to enable the webcam.</p>
                 <video id="video"></video>
             </div>
-            <div class="flex-item" style="background-image:url('https://hxlntblob.blob.core.windows.net/strikethispose/scoha1.jpg'); transform: scaleX(-1); background-size: cover;"></div>
+            <div class="flex-item" style="background-image:url('https://hxlntblob.blob.core.windows.net/strikethispose/scoha1.jpg'); background-size: cover;"></div>
             <div class="flex-caption">Use your face...</div>
             <div class="flex-caption">...to match this face!</div>
         </div>          
